<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/LblEtiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escribeTexto"
        android:textSize="20dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/TxtCuadroTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_algo"
        android:layout_below="@id/LblEtiqueta"
        android:inputType="textCapCharacters"/>

    <Button
        android:id="@+id/BtnCopiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/copiar"
        android:layout_below="@+id/TxtCuadroTexto"
        android:layout_centerHorizontal="true"
        android:onClick="Copiar"/>


    <TextView
        android:id="@+id/LblResultado"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00"
        android:layout_below="@+id/BtnCopiar"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"/>
</RelativeLayout>
